force-app/main/default/objects/ServiceRequest__c/ServiceRequest__c.object-meta.xml
<CustomObject>
    <description>Fluxo de abertura de chamados internos entre areas</description>
    <label>Solicitação de Serviço</label>
    <nameField>
        <displayFormat>SS-{00000000}</displayFormat>
        <label>Nome da Solicitação de Serviço</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Solicitações de Serviços</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>