force-app/main/default/objects/ServiceRequest__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Solicitações de Serviços</relationshipLabel>
    <relationshipName>ServiceRequest</relationshipName>
    <type>Lookup</type>
</CustomField>