force-app/main/default/objects/ServiceRequest__c/fields/AddressType__c.field-meta.xml
<CustomField>
    <fullName>AddressType__c</fullName>
    <label>Tipo de endereço</label>
    <type>TextArea</type>
</CustomField>