force-app/main/default/objects/ServiceRequest__c/fields/BillingAccountID__c.field-meta.xml
<CustomField>
    <fullName>BillingAccountID__c</fullName>
    <label>ID conta cobrança</label>
    <type>TextArea</type>
</CustomField>