force-app/main/default/objects/ServiceRequest__c/fields/BusinessHoursId__c.field-meta.xml
<CustomField>
    <fullName>BusinessHoursId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>Solicita_es_de_Servi_os</relationshipName>
    <type>Lookup</type>
</CustomField>