force-app/main/default/objects/ServiceRequest__c/fields/ClientCode__c.field-meta.xml
<CustomField>
    <fullName>ClientCode__c</fullName>
    <label>Código de cliente</label>
    <type>TextArea</type>
</CustomField>