force-app/main/default/objects/ServiceRequest__c/fields/ClientDocument__c.field-meta.xml
<CustomField>
    <fullName>ClientDocument__c</fullName>
    <label>Documento do Cliente</label>
    <length>14</length>
    <type>Text</type>
</CustomField>