force-app/main/default/objects/ServiceRequest__c/fields/ClosingDateTime__c.field-meta.xml
<CustomField>
    <fullName>ClosingDateTime__c</fullName>
    <label>Data/Hora de fechamento</label>
    <type>DateTime</type>
</CustomField>