force-app/main/default/objects/ServiceRequest__c/fields/ComplementaryInformation__c.field-meta.xml
<CustomField>
    <fullName>ComplementaryInformation__c</fullName>
    <description>Quaisquer informações adicionais sobre o atendimento.</description>
    <inlineHelpText>Quaisquer informações adicionais sobre o atendimento.</inlineHelpText>
    <label>Informação Complementar</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>