force-app/main/default/objects/ServiceRequest__c/fields/ContactType__c.field-meta.xml
<CustomField>
    <fullName>ContactType__c</fullName>
    <description>Indicação se o cliente contatou o Personal ou foi contatado por ele.</description>
    <inlineHelpText>Indicação se o cliente contatou o Personal ou foi contatado por ele.</inlineHelpText>
    <label>Tipo de contato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ativo</fullName>
            </value>
            <value>
                <fullName>Receptivo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>