force-app/main/default/objects/ServiceRequest__c/fields/Criticality__c.field-meta.xml
<CustomField>
    <fullName>Criticality__c</fullName>
    <label>Criticidade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>