force-app/main/default/objects/ServiceRequest__c/fields/DateInconsistency__c.field-meta.xml
<CustomField>
    <fullName>DateInconsistency__c</fullName>
    <label>Data inconsistência</label>
    <type>Date</type>
</CustomField>