force-app/main/default/objects/ServiceRequest__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Descrição</label>
    <length>255</length>
    <type>Text</type>
</CustomField>