force-app/main/default/objects/ServiceRequest__c/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <label>Data de Vencimento</label>
    <type>DateTime</type>
</CustomField>