force-app/main/default/objects/ServiceRequest__c/fields/ElevatedTemperature__c.field-meta.xml
<CustomField>
    <fullName>ElevatedTemperature__c</fullName>
    <description>Indicação se cliente estava irritado no atendimento</description>
    <inlineHelpText>Indicação se cliente estava irritado no atendimento.</inlineHelpText>
    <label>Temperatura Elevada</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <label>Não</label>
            </value>
            <value>
                <fullName>Yes</fullName>
                <label>Sim</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>