force-app/main/default/objects/ServiceRequest__c/fields/ExtractionDate__c.field-meta.xml
<CustomField>
    <fullName>ExtractionDate__c</fullName>
    <label>Data da extração</label>
    <type>DateTime</type>
</CustomField>