force-app/main/default/objects/ServiceRequest__c/fields/FinalMessage__c.field-meta.xml
<CustomField>
    <fullName>FinalMessage__c</fullName>
    <label>Mensagem do Atendimento</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>