force-app/main/default/objects/ServiceRequest__c/fields/HDECase__c.field-meta.xml
<CustomField>
    <fullName>HDECase__c</fullName>
    <description>Número do Chamado HDE, caso tenha sido aberto</description>
    <inlineHelpText>Número do Chamado HDE, caso tenha sido aberto</inlineHelpText>
    <label>Chamado HDE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>