force-app/main/default/objects/ServiceRequest__c/fields/Inconsistency__c.field-meta.xml
<CustomField>
    <fullName>Inconsistency__c</fullName>
    <label>Inconsistência</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>