force-app/main/default/objects/ServiceRequest__c/fields/InconsistencyDate__c.field-meta.xml
<CustomField>
    <fullName>InconsistencyDate__c</fullName>
    <label>Data Inconsistência</label>
    <type>Date</type>
</CustomField>