force-app/main/default/objects/ServiceRequest__c/fields/IncorrectData__c.field-meta.xml
<CustomField>
    <fullName>IncorrectData__c</fullName>
    <label>Dado Incorreto</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>