force-app/main/default/objects/ServiceRequest__c/fields/IncorrectField__c.field-meta.xml
<CustomField>
    <fullName>IncorrectField__c</fullName>
    <label>Campo Incorreto</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>