force-app/main/default/objects/ServiceRequest__c/fields/isPausedTime__c.field-meta.xml
<CustomField>
    <fullName>isPausedTime__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SLA Pausado</label>
    <type>Checkbox</type>
</CustomField>