force-app/main/default/objects/ServiceRequest__c/fields/LineNumber__c.field-meta.xml
<CustomField>
    <fullName>LineNumber__c</fullName>
    <label>Número da linha</label>
    <type>TextArea</type>
</CustomField>