force-app/main/default/objects/ServiceRequest__c/fields/NotificationDate__c.field-meta.xml
<CustomField>
    <fullName>NotificationDate__c</fullName>
    <label>Data Notificação</label>
    <type>DateTime</type>
</CustomField>