force-app/main/default/objects/ServiceRequest__c/fields/Observation__c.field-meta.xml
<CustomField>
    <fullName>Observation__c</fullName>
    <label>Observação</label>
    <type>TextArea</type>
</CustomField>