force-app/main/default/objects/ServiceRequest__c/fields/OpeningDate__c.field-meta.xml
<CustomField>
    <fullName>OpeningDate__c</fullName>
    <label>Data de abertura</label>
    <type>Date</type>
</CustomField>