force-app/main/default/objects/ServiceRequest__c/fields/OpeningDateTime__c.field-meta.xml
<CustomField>
    <fullName>OpeningDateTime__c</fullName>
    <label>Data/Hora de abertura</label>
    <type>DateTime</type>
</CustomField>