force-app/main/default/objects/ServiceRequest__c/fields/PartnerAccount__c.field-meta.xml
<CustomField>
    <fullName>PartnerAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Campo para guardar o partner account para sharint de visibilidade de SS com SAV</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Solicitações de Serviços (Account)</relationshipLabel>
    <relationshipName>ServiceRequests</relationshipName>
    <type>Lookup</type>
</CustomField>