force-app/main/default/objects/ServiceRequest__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <description>Tipo produto para qual foi realizado o atendimento</description>
    <inlineHelpText>Tipo produto para qual foi realizado o atendimento</inlineHelpText>
    <label>Produto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed</fullName>
                <label>Fixa</label>
            </value>
            <value>
                <fullName>Mobile</fullName>
                <label>Móvel</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>