force-app/main/default/objects/ServiceRequest__c/fields/RatingScale__c.field-meta.xml
<CustomField>
    <fullName>RatingScale__c</fullName>
    <description>avaliação do chamado de 1 a 5.</description>
    <inlineHelpText>Avalie o chamado atendimento entre 1 á 5, onde 1 foi péssimo e 5 excelente.</inlineHelpText>
    <label>Avaliação do Chamado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>