force-app/main/default/objects/ServiceRequest__c/fields/RatingScaleStars__c.field-meta.xml
<CustomField>
    <fullName>RatingScaleStars__c</fullName>
    <description>De acordo com a avaliação do campo picklist, este campo mostrará a qtde de estrelas.</description>
    <formula>IF (ISPICKVAL(RatingScale__c,&apos;1&apos;), IMAGE(&apos;/resource/StarsOne&apos;, &quot;low&quot;),
IF (ISPICKVAL(RatingScale__c,&apos;2&apos;), IMAGE(&apos;/resource/StarsTwo&apos;, &quot;low&quot;),
IF (ISPICKVAL(RatingScale__c,&apos;3&apos;), IMAGE(&apos;/resource/StarsThree&apos;, &quot;low&quot;),
IF (ISPICKVAL(RatingScale__c,&apos;4&apos;), IMAGE(&apos;/resource/StarsFour&apos;, &quot;low&quot;),
IF (ISPICKVAL(RatingScale__c,&apos;5&apos;), IMAGE(&apos;/resource/StarsFive&apos;, &quot;low&quot;),null)
))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avaliação</label>
    <type>Text</type>
</CustomField>