force-app/main/default/objects/ServiceRequest__c/fields/RequestOrigin__c.field-meta.xml
<CustomField>
    <fullName>RequestOrigin__c</fullName>
    <label>Origem</label>
    <length>16</length>
    <type>Text</type>
</CustomField>