force-app/main/default/objects/ServiceRequest__c/fields/RequestSubType__c.field-meta.xml
<CustomField>
    <fullName>RequestSubType__c</fullName>
    <label>Subtipo do Pedido</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>RequestType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FullAddressRegister</fullName>
                <label>Cadastro endereço completo</label>
            </value>
            <value>
                <fullName>HolderName</fullName>
                <label>Nome do titular</label>
            </value>
            <value>
                <fullName>SegmentChange</fullName>
                <label>Alteração de segmento</label>
            </value>
            <value>
                <fullName>BaseAddressCorrection</fullName>
                <label>Correção de endereço base</label>
            </value>
            <value>
                <fullName>ContactPhone</fullName>
                <label>Telefone de contato</label>
            </value>
            <value>
                <fullName>Email</fullName>
                <label>E-mail</label>
            </value>
            <value>
                <fullName>ExceptionSale</fullName>
                <label>Venda por exceção</label>
            </value>
            <value>
                <fullName>SpecialCampaign</fullName>
                <label>Campanha especial</label>
            </value>
            <value>
                <fullName>ErrorGenerateActivity</fullName>
                <label>Erro para gerar atividade</label>
            </value>
            <value>
                <fullName>ErrorInsertingInstance</fullName>
                <label>Erro para inserir instância</label>
            </value>
            <value>
                <fullName>ScheduledReturn</fullName>
                <label>Agendado Retorno</label>
            </value>
            <value>
                <fullName>SOSOthers</fullName>
                <label>SOS Outros</label>
            </value>
            <value>
                <fullName>SOSTechnicalUnviability</fullName>
                <label>SOS Inviabilidade técnica</label>
            </value>
            <value>
                <fullName>CaseOpening</fullName>
                <label>Abertura de chamado</label>
            </value>
            <value>
                <fullName>CaseResponse</fullName>
                <label>Resposta de chamado</label>
            </value>
            <value>
                <fullName>OpenOrder</fullName>
                <label>Ordem em aberto</label>
            </value>
            <value>
                <fullName>PendingOrder</fullName>
                <label>Ordem pendente</label>
            </value>
            <value>
                <fullName>PendingWarranty</fullName>
                <label>Pendente garantia</label>
            </value>
            <value>
                <fullName>PidDenied</fullName>
                <label>PID negado</label>
            </value>
            <value>
                <fullName>QscDispute</fullName>
                <label>Contestação de QSC</label>
            </value>
            <value>
                <fullName>ChannelCrossing</fullName>
                <label>Cruzamento de canal</label>
            </value>
            <value>
                <fullName>CancellationDispute</fullName>
                <label>Contestação de cancelamento</label>
            </value>
            <value>
                <fullName>CorrectSale</fullName>
                <label>Corrigir venda</label>
            </value>
            <value>
                <fullName>SaleOnCancellation45Days</fullName>
                <label>Venda sobre cancelamento 45 dias</label>
            </value>
            <value>
                <fullName>ErrorCampaign</fullName>
                <label>Erro com campanha</label>
            </value>
            <value>
                <fullName>OrderInEnrichment</fullName>
                <label>Ordem em enriquecimento</label>
            </value>
            <value>
                <fullName>Scheduling</fullName>
                <label>Agendamento</label>
            </value>
            <value>
                <fullName>Cancellation</fullName>
                <label>Cancelamento</label>
            </value>
            <value>
                <fullName>NeighborhoodCorrection</fullName>
                <isActive>false</isActive>
                <label>Correção de bairro</label>
            </value>
            <value>
                <fullName>ComplementCorrection</fullName>
                <isActive>false</isActive>
                <label>Correção de complemento</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>