force-app/main/default/objects/ServiceRequest__c/fields/RequestType__c.field-meta.xml
<CustomField>
    <fullName>RequestType__c</fullName>
    <label>Tipo de Pedido</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AddressRegister</fullName>
                <label>Cadastro de endereço</label>
            </value>
            <value>
                <fullName>CorrectionRegistrationData</fullName>
                <label>Correção de dados cadastrais</label>
            </value>
            <value>
                <fullName>SaleIssue</fullName>
                <label>Emissão de venda</label>
            </value>
            <value>
                <fullName>SaleError</fullName>
                <label>Erro na Venda</label>
            </value>
            <value>
                <fullName>OpportunityConsultation</fullName>
                <label>Consulta/Liberação de oportunidade</label>
            </value>
            <value>
                <fullName>CaseOpening</fullName>
                <label>Abertura de Chamado</label>
            </value>
            <value>
                <fullName>ProblemsWithAfterSales</fullName>
                <label>Problemas com Pós Venda</label>
            </value>
            <value>
                <fullName>OrderEditing</fullName>
                <isActive>false</isActive>
                <label>Edição de ordem</label>
            </value>
            <value>
                <fullName>InclusionAutomaticDebit</fullName>
                <isActive>false</isActive>
                <label>Inclusão Debito automático</label>
            </value>
            <value>
                <fullName>Portability</fullName>
                <isActive>false</isActive>
                <label>Portabilidade</label>
            </value>
            <value>
                <fullName>TechnologyOverlay</fullName>
                <isActive>false</isActive>
                <label>Sobreposição de Tecnologia</label>
            </value>
            <value>
                <fullName>SystemicError</fullName>
                <isActive>false</isActive>
                <label>SystemicError</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>