force-app/main/default/objects/ServiceRequest__c/fields/RequestTypeFormula__c.field-meta.xml
<CustomField>
    <fullName>RequestTypeFormula__c</fullName>
    <description>Campa para comparar o grupo do chatter criado.</description>
    <formula>IF(ISPICKVAL(RequestType__c, &quot;AddressRegister&quot;), &quot;Cadastro de endereço&quot;, 
			IF(ISPICKVAL(RequestType__c, &quot;CorrectionRegistrationData&quot;), &quot;Correção de dados cadastrais&quot;, 
						IF(ISPICKVAL(RequestType__c, &quot;SaleIssue&quot;), &quot;Emissão de venda&quot;,
									IF(ISPICKVAL(RequestType__c, &quot;SystemicError&quot;), &quot;Erro Sistêmico&quot;,
												IF(ISPICKVAL(RequestType__c, &quot;Portability&quot;), &quot;Portabilidade&quot;,
															IF(ISPICKVAL(RequestType__c, &quot;OpportunityConsultation&quot;), &quot;Consulta Oportunidade&quot;,
																		IF(ISPICKVAL(RequestType__c, &quot;CaseOpening&quot;), &quot;Abertura de Chamado&quot;,
																					IF(ISPICKVAL(RequestType__c, &quot;TechnologyOverlay&quot;), &quot;Sobreposição de Tecnologia&quot;,
																								IF(ISPICKVAL(RequestType__c, &quot;OrderEditing&quot;), &quot;Edição de ordem&quot;,&quot;Inclusão Debito automático&quot;)
																					)
																		)
																)
													)
										)
							)
				)
	)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RequestTypeFormula</label>
    <type>Text</type>
</CustomField>