force-app/main/default/objects/ServiceRequest__c/fields/ServiceDetail__c.field-meta.xml
<CustomField>
    <fullName>ServiceDetail__c</fullName>
    <description>Tabulação complementar ao motivo</description>
    <inlineHelpText>Tabulação complementar ao motivo</inlineHelpText>
    <label>Detalhe Atendimento</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ServiceReason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AutomatedDebtChange</fullName>
                <label>Alteração Débito automático</label>
            </value>
            <value>
                <fullName>ChangeDigitalAccount</fullName>
                <label>Alteração para Conta digital</label>
            </value>
            <value>
                <fullName>ChangePaperBill</fullName>
                <label>Alteração para Conta papel</label>
            </value>
            <value>
                <fullName>Cancelling</fullName>
                <label>Cancelamento</label>
            </value>
            <value>
                <fullName>OrderCancel</fullName>
                <label>Cancelar pedido</label>
            </value>
            <value>
                <fullName>CallSurplusOtherCarriers</fullName>
                <label>Chamadas/excedentes/outra operadora</label>
            </value>
            <value>
                <fullName>ProRataResidualCharge</fullName>
                <label>Cobrança pro-rata/residual</label>
            </value>
            <value>
                <fullName>Buy</fullName>
                <label>Compra</label>
            </value>
            <value>
                <fullName>InteractivitiesInsuranceSvaThirdParties</fullName>
                <label>Interatividades/seguro/sva/terceiros</label>
            </value>
            <value>
                <fullName>Internet</fullName>
            </value>
            <value>
                <fullName>Line</fullName>
                <label>Linha</label>
            </value>
            <value>
                <fullName>PenaltyAndInterestForLatePayment</fullName>
                <label>Multa e juros por atraso de pagamento</label>
            </value>
            <value>
                <fullName>PlanMonthlyFee</fullName>
                <label>Plano/mensalidade</label>
            </value>
            <value>
                <fullName>DiscountProblems</fullName>
                <label>Problemas com desconto</label>
            </value>
            <value>
                <fullName>PerformBlock</fullName>
                <label>Realizar bloqueio</label>
            </value>
            <value>
                <fullName>PerformUnblock</fullName>
                <label>Realizar desbloqueio</label>
            </value>
            <value>
                <fullName>PlaceOrder</fullName>
                <label>Realizar pedido</label>
            </value>
            <value>
                <fullName>RequestDuplicate</fullName>
                <label>Solicitação de 2Via</label>
            </value>
            <value>
                <fullName>TV</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Dependent</fullName>
                <label>Dependente</label>
            </value>
            <value>
                <fullName>Holder</fullName>
                <label>Titular</label>
            </value>
            <value>
                <fullName>InvoiceClarification</fullName>
                <label>Esclarecimento Fatura</label>
            </value>
            <value>
                <fullName>Readjustment</fullName>
                <label>Reajuste</label>
            </value>
            <value>
                <fullName>PurchaseChargebackGuidance</fullName>
                <label>Orientação compra/estorno</label>
            </value>
            <value>
                <fullName>AccessUseGuidance</fullName>
                <label>Orientação Acesso/uso</label>
            </value>
            <value>
                <fullName>AddBluePrintTDNANames</fullName>
                <label>Add Nomes TDNAs Blue Print</label>
            </value>
            <value>
                <fullName>FamilyToVivoV</fullName>
                <label>Familia para Vivo V</label>
            </value>
            <value>
                <fullName>Others</fullName>
                <label>Outros</label>
            </value>
            <value>
                <fullName>EndOfLoyalty</fullName>
                <label>Fim de fidelidade</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>