force-app/main/default/objects/ServiceRequest__c/fields/ServiceOrientation__c.field-meta.xml
<CustomField>
    <fullName>ServiceOrientation__c</fullName>
    <description>Campo texto com orientação para a tratativa</description>
    <formula>CASE(ServiceReason__c,
&quot;Alteração Cadastral&quot;,&quot;Acesse o NEXT e realize o procedimento para o cliente&quot;,
&quot;Bloqueio perda/roubo&quot;,&quot;Acesse o NEXT e realize o procedimento para o cliente&quot;,
&quot;Cancelar plano&quot;,&quot;Acesse o NEXT e realize o procedimento para o cliente. Garanta que o cliente entendeu as regras de negocio do cancelamento de linha&quot;,					
&quot;Contestação&quot;,&quot;Acesse o sistema e realize o procedimento de acordo com as regras estabelecidas. Realize e garanta a correção da causa raiz para não gerar outra contestação. Caso necessário abra chamado no HDE e acompanhe até conclusão&quot;,
&quot;Fatura&quot;,&quot;Acesse o sistema e realize o procedimento.Caso necessário abra chamado no HDE e acompanhe até conclusão&quot;,
&quot;Informe pagamento/religue&quot;,&quot;Acesse o sistema e realize o procedimento.Caso necessário abra chamado no HDE e acompanhe até conclusão&quot;,
&quot;Mudança de Endereço&quot;,&quot;Acesse sistema GPS e execute o fluxo de reparo adequado.Caso não encontre, acesse o nosso portal para mais informações e procedimentos.&quot;,
&quot;Nova alta&quot;,&quot;Acesse o NEXT e realize o procedimento para o cliente.Garanta que o cliente entendeu o beneficios do novo plano&quot;,
&quot;Portabilidade&quot;,&quot;Acesse o NEXT e realize o procedimento para o cliente&quot;,
&quot;Reparo&quot;,&quot;Acesse o NEXT e realize o procedimento para o cliente&quot;,
&quot;SVA&quot;,&quot;Acesse o NEXT e realize o procedimento para o cliente. Confirme com os clientes as condições da oferta&quot;,
&quot;Troca de titularidade&quot;,&quot;Acesse o NEXT e realize o procedimento para o cliente&quot;,
&quot;Upgrade plano&quot;,&quot;Acesse o NEXT e realize o procedimento para o cliente&quot;,
&quot;Venda SVA&quot;,&quot;Acesse o NEXT e realize o procedimento para o cliente&quot;,
&quot;Nova alta cliente fixa&quot;,&quot;Acesse o NEXT e realize o procedimento para o cliente&quot;,
&quot;Nova alta cliente móvel&quot;,&quot;Acesse o NEXT e realize o procedimento para o cliente&quot;,
NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Campo texto com orientação para a tratativa</inlineHelpText>
    <label>Orientação Atendimento</label>
    <type>Text</type>
</CustomField>