force-app/main/default/objects/ServiceRequest__c/fields/ServiceProtocol__c.field-meta.xml
<CustomField>
    <fullName>ServiceProtocol__c</fullName>
    <description>Número do protocolo aberto para outras áreas (Ex: Remedy)</description>
    <inlineHelpText>Número do protocolo aberto para outras áreas (Ex: Remedy)</inlineHelpText>
    <label>Protocolo Sistêmico</label>
    <length>20</length>
    <type>Text</type>
</CustomField>