force-app/main/default/objects/ServiceRequest__c/fields/ServiceReason__c.field-meta.xml
<CustomField>
    <fullName>ServiceReason__c</fullName>
    <description>Motivo pelo qual o cliente acionou o personal ou foi acionado por ele.</description>
    <inlineHelpText>Motivo pelo qual o cliente acionou o personal ou foi acionado por ele.</inlineHelpText>
    <label>Motivo de Atendimento</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>TypeOfService__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MassiveMonitoring</fullName>
                <label>Acompanhamento de Massiva</label>
            </value>
            <value>
                <fullName>RepairMonitoring</fullName>
                <label>Acompanhemento Reparo</label>
            </value>
            <value>
                <fullName>RegistrationChange</fullName>
                <label>Alteração Cadastral</label>
            </value>
            <value>
                <fullName>TVAquisition</fullName>
                <label>Aquisição TV</label>
            </value>
            <value>
                <fullName>LossTheftLock</fullName>
                <label>Bloqueio perda/roubo</label>
            </value>
            <value>
                <fullName>Welcoming</fullName>
                <label>Boas vindas</label>
            </value>
            <value>
                <fullName>PlanCancel</fullName>
                <label>Cancelar plano</label>
            </value>
            <value>
                <fullName>DeviceBuy</fullName>
                <label>Compra aparelho</label>
            </value>
            <value>
                <fullName>Contestation</fullName>
                <label>Contestação</label>
            </value>
            <value>
                <fullName>PlanDowngrade</fullName>
                <label>Downgrade plano</label>
            </value>
            <value>
                <fullName>ExplanationInvoiceWithErrorAlreadyCorrected</fullName>
                <label>Explicação fatura com erro já corrigida</label>
            </value>
            <value>
                <fullName>ExplanationInvoiceVariation</fullName>
                <label>Explicação variação fatura</label>
            </value>
            <value>
                <fullName>Invoice</fullName>
                <label>Fatura</label>
            </value>
            <value>
                <fullName>PlanInformation</fullName>
                <label>Informações plano</label>
            </value>
            <value>
                <fullName>EnterPaymentReconnect</fullName>
                <label>Informe pagamento/religue</label>
            </value>
            <value>
                <fullName>FixedInstallation</fullName>
                <label>Instalação Fixa</label>
            </value>
            <value>
                <fullName>OnlineStore</fullName>
                <label>Loja Online</label>
            </value>
            <value>
                <fullName>MyVivo</fullName>
                <label>Meu Vivo</label>
            </value>
            <value>
                <fullName>TechnologyMigration</fullName>
                <label>Migração Tecnologia</label>
            </value>
            <value>
                <fullName>AddressChange</fullName>
                <label>Mudança de Endereço</label>
            </value>
            <value>
                <fullName>DelayedInvoiceNegociation</fullName>
                <label>Negociação fatura em atraso</label>
            </value>
            <value>
                <fullName>NewHighFxedCustomer</fullName>
                <label>Nova alta cliente fixa</label>
            </value>
            <value>
                <fullName>NewHighMobileCustomer</fullName>
                <label>Nova alta cliente móvel</label>
            </value>
            <value>
                <fullName>DataSharingOrientation</fullName>
                <label>Orientação compartilhamento dados</label>
            </value>
            <value>
                <fullName>FraudOrientation</fullName>
                <label>Orientação Fraude</label>
            </value>
            <value>
                <fullName>ChipQualificationOrientation</fullName>
                <label>Orientação Habilitação Chip</label>
            </value>
            <value>
                <fullName>RomingUseOrientation</fullName>
                <label>Orientação uso Roaming</label>
            </value>
            <value>
                <fullName>VivoTravelOrientation</fullName>
                <label>Orientação Vivo Travel</label>
            </value>
            <value>
                <fullName>VivoValorizeOrientation</fullName>
                <label>Orientação Vivo Valoriza</label>
            </value>
            <value>
                <fullName>OtherTDNA</fullName>
                <label>Outros TDNAs</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>