force-app/main/default/objects/ServiceRequest__c/fields/ServiceRequestURL__c.field-meta.xml
<CustomField>
    <fullName>ServiceRequestURL__c</fullName>
    <description>Link para acesso ao registro via Grupo Chatter</description>
    <formula>$Setup.ServiceRequestLink__c.ServiceRequestLink__c &amp; Id &amp; &quot;/&quot;&amp;&quot;view&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ServiceRequestURL</label>
    <type>Text</type>
</CustomField>