force-app/main/default/objects/ServiceRequest__c/fields/ServiceResolution__c.field-meta.xml
<CustomField>
    <fullName>ServiceResolution__c</fullName>
    <description>Indica se atendimento foi resolvido online ou há pendência para retorno</description>
    <inlineHelpText>Indica se atendimento foi resolvido online ou há pendência para retorno</inlineHelpText>
    <label>Resolução Atendimento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HDEOpen</fullName>
                <label>Aberto HDE</label>
            </value>
            <value>
                <fullName>OpenedProtocolOtherAreas</fullName>
                <label>Aberto protocolo outras áreas</label>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>