force-app/main/default/objects/ServiceRequest__c/fields/Signature__c.field-meta.xml
<CustomField>
    <fullName>Signature__c</fullName>
    <label>Assinatura</label>
    <type>TextArea</type>
</CustomField>