force-app/main/default/objects/ServiceRequest__c/fields/SlaHours__c.field-meta.xml
<CustomField>
    <fullName>SlaHours__c</fullName>
    <label>SLA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>